# data-harmonizer

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
data_harmonizer/: main.py  split_data.py  synthetic_data.py
data_harmonizer/data/: schema_data.py  split_data.py  synthetic_data.py
data_harmonizer/modeling/: train.py
src/data_harmonizer/: main.py
src/data_harmonizer/cli/: cli.py
src/data_harmonizer/data/: schema_data.py  split_data.py  synthetic_data.py
src/data_harmonizer/modeling/: train.py
tests/: test_linkml.yaml  test_schema_data.py  test_split_data.py  test_synthetic_data.py
